--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,55 +1,21 @@
 /*
-	Photon by HTML5 UP
+	Miniport by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Header */
+/* Button */
 
-	#header {
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#4fa49a", endColorStr="#4361c2", GradientType=1);
-		position: relative;
+	input[type="button"],
+	input[type="submit"],
+	input[type="reset"],
+	button,
+	.button {
+		background-image: url("images/ie/grad0-20.svg");
 	}
 
-		#header:before {
-			background-image: url("images/overlay2.png"), url("images/overlay3.svg");
-			background-position: top left,							center center;
-			background-size: auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
+/* List */
 
-		#header > * {
-			position: relative;
-			z-index: 1;
-		}
-
-/* Footer */
-
-	#footer {
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#4361c2", endColorStr="#4fa49a", GradientType=1);
-		position: relative;
+	ul.social li a:before {
+		background-image: url("images/ie/grad0-20.svg");
 	}
-
-		#footer:before {
-			background-image: url("images/overlay2.png"), url("images/overlay4.svg");
-			background-position: top left,							center center;
-			background-size: auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		#footer > * {
-			position: relative;
-			z-index: 1;
-		}
