--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -1,66 +1,28 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
-
 /*
-	Photon by HTML5 UP
+	Miniport by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Header */
+/* Button */
 
-	#header {
-		$from: _palette(accent3-alt);
-		$to: _palette(accent6-alt);
-
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#{$from}", endColorStr="#{$to}", GradientType=1);
-		position: relative;
-
-		&:before {
-			background-image:		url('images/overlay2.png'),		url('images/overlay3.svg');
-			background-position:	top left,							center center;
-			background-size:		auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		> * {
-			position: relative;
-			z-index: 1;
-		}
+	input[type="button"],
+	input[type="submit"],
+	input[type="reset"],
+	button,
+	.button {
+		background-image: url('images/ie/grad0-20.svg');
 	}
 
-/* Footer */
+/* List */
 
-	#footer {
-		$from: _palette(accent6-alt);
-		$to: _palette(accent3-alt);
-
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#{$from}", endColorStr="#{$to}", GradientType=1);
-		position: relative;
-
-		&:before {
-			background-image:		url('images/overlay2.png'),		url('images/overlay4.svg');
-			background-position:	top left,							center center;
-			background-size:		auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		> * {
-			position: relative;
-			z-index: 1;
-		}
+	ul.social {
+		li {
+			a:before {
+	  			background-image: url('images/ie/grad0-20.svg');
+	  		}
+	  	}
 	}
