--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1645,7 +1645,7 @@
 /* Nav */
 
 	#nav {
-		background-color: #282828;
+		background-color: #00BCD4;
 		text-align: center;
 		position: fixed;
 		left: 0;
