--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1672,7 +1672,7 @@
 		}
 
 			#nav a:hover {
-				color: #FFFFFF !important;
+				color: #D32F2F !important;
 			}
 
 			#nav a.active:before {
@@ -1684,7 +1684,7 @@
 				margin-left: -0.75em;
 				border-left: solid 0.75em transparent;
 				border-right: solid 0.75em transparent;
-				border-top: solid 0.6em #282828;
+				border-top: solid 0.6em #D32F2F;
 			}
 
 /* Articles */
@@ -2077,7 +2077,7 @@
 		/* Nav */
 
 			#nav a {
-				padding: 1.5em;
+				padding: 0.5em;
 			}
 
 		/* Articles */
