--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1645,52 +1645,47 @@
 /* Nav */
 
 	#nav {
+		background-color: #D32F2F;
+		text-align: center;
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		z-index: 10000;
 		cursor: default;
 	}
 
-		#nav > ul > li > a {
-			border: 0;
+		#nav ul {
+			margin-bottom: 0;
+		}
+
+		#nav li {
+			display: inline-block;
+		}
+
+		#nav a {
+			position: relative;
+			display: block;
+			color: #FFFFFF;
 			text-decoration: none;
-			text-transform: uppercase;
-			font-weight: 400;
-			color: #777;
 			outline: 0;
 		}
 
-			#nav > ul > li > a:before {
-				display: inline-block;
-				background: #878787;
-				color: #e4e4e4;
-				width: 1.65em;
-				height: 1.65em;
-				border-radius: 1.65em;
-				line-height: 1.65em;
-				text-align: center;
-				box-shadow: 0.125em 0.175em 0 0 rgba(0, 0, 0, 0.125);
-				margin-right: 0.75em;
-				-moz-transition: color 0.25s ease-in-out, background 0.25s ease-in-out;
-				-webkit-transition: color 0.25s ease-in-out, background 0.25s ease-in-out;
-				-o-transition: color 0.25s ease-in-out, background 0.25s ease-in-out;
-				-ms-transition: color 0.25s ease-in-out, background 0.25s ease-in-out;
-				transition: color 0.25s ease-in-out, background 0.25s ease-in-out;
+			#nav a:hover {
+				color: #FFFFFF !important;
 			}
 
-			#nav > ul > li > a > span {
-				-moz-transition: color 0.25s ease-in-out;
-				-webkit-transition: color 0.25s ease-in-out;
-				-o-transition: color 0.25s ease-in-out;
-				-ms-transition: color 0.25s ease-in-out;
-				transition: color 0.25s ease-in-out;
+			#nav a.active:before {
+				content: '';
+				display: block;
+				position: absolute;
+				bottom: -0.6em;
+				left: 50%;
+				margin-left: -0.75em;
+				border-left: solid 0.75em transparent;
+				border-right: solid 0.75em transparent;
+				border-top: solid 0.6em #FFFFFF;
 			}
-
-		#nav > ul > li.active > a:before, #nav > ul > li:hover > a:before {
-			background: #ED786A;
-			color: #fff;
-		}
-
-		#nav > ul > li.active > a > span, #nav > ul > li:hover > a > span {
-			color: #ED786A;
-		}
 
 /* Articles */
 
