--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1657,6 +1657,9 @@
 
 		#nav ul {
 			margin-bottom: 0;
+			border-radius: 0.35em;
+			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+			padding: 0 1.5em 0 1.5em;
 		}
 
 		#nav li {
