--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1604,7 +1604,7 @@
 
 		.wrapper.style1 {
 			background-image: none;
-			background-color: #fff;
+			background-color: #ffffff;
 		}
 
 		.wrapper.style2 {
