--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1604,7 +1604,7 @@
 
 		.wrapper.style1 {
 			background-image: none;
-			background-color: #ffffff;
+			background-color: #fff;
 		}
 
 		.wrapper.style2 {
@@ -1848,7 +1848,7 @@
 				margin: 0.6em 0.2em 0.6em 0.2em;
 				font-weight: 600;
 				border-radius: 8px;
-				color: #fff;
+				color: #ffffff;
 			}
 
 				#nav a:hover {
