--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1852,11 +1852,11 @@
 			}
 
 				#nav a:hover {
-					background: #383838;
+					background: #ffffff;
 				}
 
 				#nav a:active {
-					background: #484848;
+					background: #ffffff;
 				}
 
 		/* Articles */
