--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1658,7 +1658,7 @@
 		#nav ul {
 			margin-bottom: 0;
 			border-radius: 0.35em;
-			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+			box-shadow: inset 0px 0px 1px 1px rgba(33, 33, 33, 0.5);
 			padding: 0 1.5em 0 1.5em;
 		}
 
@@ -1677,7 +1677,7 @@
 		}
 
 			#nav a:hover {
-				color: #E5E5E5 !important;
+				color: #FFFFFF !important;
 			}
 
 			#nav a.active:before {
