--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1657,15 +1657,10 @@
 
 		#nav ul {
 			margin-bottom: 0;
-			border-radius: 0.35em;
-			box-shadow: inset 0px 0px 1px 1px rgba(33, 33, 33, 0.5);
-			padding: 0 1.5em 0 1.5em;
 		}
 
 		#nav li {
 			display: inline-block;
-			text-align: center;
-			padding: 0 1.5em 0 1.5em;
 		}
 
 		#nav a {
@@ -1689,7 +1684,7 @@
 				margin-left: -0.75em;
 				border-left: solid 0.75em transparent;
 				border-right: solid 0.75em transparent;
-				border-top: solid 0.6em #E5E5E5;
+				border-top: solid 0.6em #FFFFFF;
 			}
 
 /* Articles */
