--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1553,7 +1553,7 @@
 /* Box */
 
 	.box {
-		background: #fff;
+		background: #FFFFFF;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		text-align: center;
 	}
