--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1553,7 +1553,7 @@
 /* Box */
 
 	.box {
-		background: #FFFFFF;
+		background: #fff;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		text-align: center;
 	}
@@ -1666,7 +1666,7 @@
 		#nav a {
 			position: relative;
 			display: block;
-			color: #FFFFFF;
+			color: #D32F2F;
 			text-decoration: none;
 			outline: 0;
 		}
