--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1666,7 +1666,7 @@
 		#nav a {
 			position: relative;
 			display: block;
-			color: #212121;
+			color: #FFFFFF;
 			text-decoration: none;
 			outline: 0;
 		}
