--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1684,7 +1684,7 @@
 				margin-left: -0.75em;
 				border-left: solid 0.75em transparent;
 				border-right: solid 0.75em transparent;
-				border-top: solid 0.6em #9E9E9E;
+				border-top: solid 0.6em #FFFFFF;
 			}
 
 /* Articles */
